--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<section id="hero" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 			<h1>Alice Moh</h1>
-			<p>I'm a <span class="typed" data-typed-items="Game Dev, Artist, Writer, Squid Enthusiast"></span></p>
+			<p>I'm a <span class="typed" data-typed-items="Game Dev, Programmer, Squid Enthusiast"></span></p>
 			<div class="social-links">
 				<a href="https://twitter.com/cinnamon18_" class="twitter"><i class="bx bxl-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/alice-moh-1b4799163/" class="linkedin"><i
@@ -116,7 +116,8 @@
 								<h4>Melody Star!</h4>
 								<p>Fall 2019</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/melody-star/"><i class="bx bx-play"></i></a>
+									<a href="http://vgdev.gtorg.gatech.edu/game/melody-star/"><i
+											class="bx bx-play"></i></a>
 									<a href="melodyStarDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
@@ -144,7 +145,8 @@
 								<h4>Mi So Madness</h4>
 								<p>Coming Late 2020</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/"><i class="bx bx-play"></i></a>
+									<a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/"><i
+											class="bx bx-play"></i></a>
 									<a href="miSoMadnessDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
@@ -300,8 +302,8 @@
 				<div class="section-title">
 					<h2>Proficiencies</h2>
 					<p>I'm a computer scientist by trade, so it's only natural I'd gravitate towards programming related
-						roles in game development. However, I've been able to learn a variety of skillsets by working on
-						projects by myself and in smaller teams.</p>
+						roles in game development. However, I've been able to learn a variety of skills by
+						leading projects, creating games solo, and working in smaller teams.</p>
 				</div>
 
 				<div class="row skills-content">
@@ -389,7 +391,8 @@
 
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResumeGames.pdf">here</a> </p>
+					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResumeGames.pdf">here</a>
+					</p>
 				</div>
 
 				<div class="row">
@@ -410,8 +413,8 @@
 							<h5>2017 - 2020</h5>
 							<p><em>Atlanta, GA</em></p>
 							<ul>
-								<li>Candidate for Bachelor of Science in Computer Science, GPA 3.5</li>
-								<li>Concentrations in Graphics and Artificial Intelligence</li>
+								<li>Bachelor of Science in Computer Science, GPA 3.5</li>
+								<li>Concentrations in Graphics Programming and Artificial Intelligence</li>
 							</ul>
 						</div>
 
