--- a/lunaciaDetails.html
+++ b/lunaciaDetails.html
@@ -67,11 +67,18 @@
 
 						<p>
 							Lunacia is an atmospheric puzzle / platformer about finding yourself through dreams. I
-							co-lead this project with Yoon Lee. I'm involved in all aspects, but I'm focusing on
-							technical leadership, programming, and visual effects.
-
+							co-lead this project with Yoon Lee. I was involved in all aspects of the game, but I focused
+							on technical leadership, programming, and visual effects.
+						</p>
+						<p>
 							One interesting system I worked on with this project was a publisher / subscriber system.
-							Early on it became apparent our technical team would be both large and innexperienced.
+							Early on it became apparent our technical team would be both large and inexperienced.
+							Additionally, our plans for obstacles, respawning, differing visibility states, and a
+							dynamic soundtrack called for a fair amount of interaction between different systems. I
+							decided the best approach would be to implement an asynchronous messaging queue that would
+							allow developers to communicate with minimal knowledge of each other’s systems. The system
+							proved very effective in reducing integration issues between different developers’ work.
+
 						</p>
 					</div>
 				</div>
