--- a/melodyStarDetails.html
+++ b/melodyStarDetails.html
@@ -69,7 +69,11 @@
 						</ul>
 
 						<p>
-							
+							Melody Star! is a rhythm game played with a real piano. Instead of pressing buttons on a
+							controller, players use an electronic instrument to play the actual notes of a song! The
+							game follows a cast of lovable characters as they strive to become the best musicians in the
+							land! I lead this project and focused on the tricky technical challenges of creating a
+							system that adapted songs into beatmaps for input from any midi controller or keyboard.
 						</p>
 					</div>
 
