--- a/pathToHarmonyDetails.html
+++ b/pathToHarmonyDetails.html
@@ -69,19 +69,14 @@
 
 						<p>
 							Path to Harmony is one of the games I'm most proud of. I led this project as part of VGDev,
-							Georgia Tech's game creation club, and was involved in every aspect of its creation. Over
-							six months my team made a fully featured game with a compelling narrative, soundtrack,
-							dozens of levels and units, and deep game play. Heading the project let me develop
-							leadership and project management skills, in addition to game development skills. PtH was my
-							first time architecting a project of its scale, and I learned an enormous amount from my
-							successful decisions as well as the ones that caused growing pains.
-						</p>
-						<p>
-							The game follows the adventures of Blair, an idealistic strategist in the Xingatan army.
-							They always dreamed of being a righteous leader like the monarchs of legend. When a plague
-							strikes and the Kingdom of Xingata's strained relationships with its neighbors snap, Blair
-							gets a chance to prove their leadership in battle. But as they rise though the ranks it
-							becomes clear not all is as it seems within the Xingatan military.
+							Georgia Tech's game creation club, and was involved in every aspect of its creation. The
+							game is a tactics game which follows the adventures of Blair, an idealistic strategist in
+							the Xingatan army, as they find victory in battle and discover uncomfortable truth’s about
+							their country. Over six months my team made a fully featured game with a compelling
+							narrative, soundtrack, dozens of levels and units, and deep game play. Heading the project
+							let me develop leadership and project management skills, in addition to game development
+							skills. PtH was my first time architecting a project of its scale, and I learned an enormous
+							amount from my successful decisions as well as the ones that caused growing pains.
 						</p>
 					</div>
 
