--- a/systemExitDetails.html
+++ b/systemExitDetails.html
@@ -67,16 +67,15 @@
 						</ul>
 
 						<p>
-							System.Exit was my first game with VGDev. I had the fortune to work under a patient lead who
-							helped me learn skills that are necessary to work on larger projects, such as developing
-							with an established code base. My work on System.Exit focused on development; I designed and
-							implemented mechanics, items, enemies, and battles.
+							System.Exit was my first game with VGDev, Georgia Tech’s game development club. I had the
+							fortune to work under a patient lead who helped me learn skills that are necessary to work
+							on larger projects, such as developing with an established code base. My work on System.Exit
+							focused on development; I designed and implemented mechanics, items, enemies, and battles.
 						</p>
 						<p>
-							System.Exit also taught me the value of play testing. Although testing is crucial for all
-							games, an RPG like ours was especially difficult to balance with the "squint and hope"
-							method, and the enjoyability of the game improved markedly as we iterated.
-						</p>
+							System.Exit also taught me the value of play testing. Our intuition based balancing efforts
+							produced clunky power curves, and the enjoyability of the game improved markedly as we
+							iterated. </p>
 					</div>
 
 				</div>
