--- a/tobiDetails.html
+++ b/tobiDetails.html
@@ -66,15 +66,7 @@
 
 						<p>
 							Trouble on Beryl Isle is a sunny platformer I worked on through VGDev. I coded AI for an
-							enemy in addition to creating levels / environments.
-						</p>
-						<p>
-							The annual Party in the Penthouse is the most exclusive event on Beryl Isle, and you weren’t
-							cool enough to get the invite… Play as Luke the Wolf, explore every nook and cranny of his
-							island hometown at your leisure, and discover spots he can tag to build up his reputation!
-							Inspired by the classics of the genre, Trouble on Beryl Isle is a feel-good, open-world 3D
-							platformer, with fun enemies to fight and a deep moveset to master.
-						</p>
+							enemy in addition to creating levels and environments. </p>
 					</div>
 
 				</div>
