--- a/miSoMadnessDetails.html
+++ b/miSoMadnessDetails.html
@@ -62,14 +62,15 @@
 						<ul>
 							<li><strong>Engine</strong>: UE4</li>
 							<li><strong>Project date</strong>: Fall 2020</li>
-							<li><strong>Play</strong>: <a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/">http://vgdev.gtorg.gatech.edu/game/mi-so-madness/</a></li>
+							<li><strong>Play</strong>: <a
+									href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/">http://vgdev.gtorg.gatech.edu/game/mi-so-madness/</a>
+							</li>
 						</ul>
 
 						<p>
 							Mi So Madness is a multiplayer infinite runner that uses the Steam Online Subsystem for its
-							networking functionality. I am contributing c+ and blueprint networking code for some of the
-							internal systems.
-						</p>
+							networking functionality. I contributed c+ and blueprint networking code for some of the
+							internal systems. </p>
 					</div>
 
 				</div>
