update mi so madness date

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<img src="assets/img/portfolio/miSoMadnessCover.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<h4>Mi So Madness</h4>
-								<p>Coming Late 2020</p>
+								<p>Fall 2020</p>
 								<div class="portfolio-links">
 									<a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/"><i
 											class="bx bx-play"></i></a>
