update portfolio! new job wow.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		<nav class="nav-menu">
 			<ul>
 				<li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+				<li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
 				<li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
 				<li><a href="#skills"><i class="bx bx-pencil"></i> <span>Skills</span></a></li>
-				<li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
 				<li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
 				<li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 			</ul>
@@ -64,7 +64,7 @@
 			<h1>Alice Moh</h1>
 			<p>I'm a <span class="typed" data-typed-items="Game Dev, Programmer, Squid Enthusiast"></span></p>
 			<div class="social-links">
-				<a href="https://twitter.com/cinnamon18_" class="twitter"><i class="bx bxl-twitter"></i></a>
+				<a href="https://twitter.com/cinnasquid" class="twitter"><i class="bx bxl-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/alice-moh-1b4799163/" class="linkedin"><i
 						class="bx bxl-linkedin"></i></a>
 			</div>
@@ -97,6 +97,24 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
 						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/peridotCover.jpg" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Peridot</h4>
+								<p>2021 - Present</p>
+								<div class="portfolio-links">
+									<a href="https://apps.apple.com/sg/app/peridot/id1613403407"><i
+											class="bx bxl-apple"></i></a>
+									<a
+										href="https://play.google.com/store/apps/details?id=com.nianticlabs.peridot&hl=en_US&gl=MY"><i
+											class="bx bxl-android"></i></a>
+									<a href="peridotDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/PTHCover.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<h4>Path to Harmony</h4>
@@ -126,13 +144,14 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/lunaciaCover.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Lunacia</h4>
-								<p>Fall 2020</p>
+								<h4>Trouble on Beryl Isle</h4>
+								<p>Spring 2018</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/lunacia/"><i class="bx bx-play"></i></a>
-									<a href="lunaciaDetails.html"><i class="bx bx-link"></i></a>
+									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i
+											class="bx bx-play"></i></a>
+									<a href="tobiDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -152,6 +171,35 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/penguPerilCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Pengu Peril</h4>
+								<p>April 2022</p>
+								<div class="portfolio-links">
+									<a href="https://cinnamon18.itch.io/pengu-peril"><i class="bx bx-play"></i></a>
+									<a href="penguPerilDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/lunaciaCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Lunacia</h4>
+								<p>Fall 2020</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/lunacia/"><i class="bx bx-play"></i></a>
+									<a href="lunaciaDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
 						<div class="portfolio-wrap">
@@ -177,21 +225,6 @@
 								<div class="portfolio-links">
 									<a href="https://sarahcatseye.itch.io/rv-vr"><i class="bx bx-play"></i></a>
 									<a href="rvvrDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Trouble on Beryl Isle</h4>
-								<p>Spring 2018</p>
-								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i
-											class="bx bx-play"></i></a>
-									<a href="tobiDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -250,8 +283,10 @@
 
 				<div class="section-title">
 					<h2>Who am I?</h2>
-					<p>I'm Alice, a Georgia Tech computer science student, and a game dev in my free time. I've been
-						making and playing games since elementary school, although over the years I've gotten quite a
+					<p>I'm Alice, a game dev at <a href="https://nianticlabs.com/?hl=en">Niantic</a>.
+						I also make indie games in my free time!
+						I've been making and playing games since elementary school, although over the years I've gotten
+						quite a
 						bit better at both. I love that games let me combine my technical and creative skills!</p>
 					</br>
 				</div>
@@ -270,8 +305,9 @@
 						<div class="row">
 							<div class="col-lg-12">
 								<ul>
-									<li><i class="icofont-rounded-right"></i> <strong>School: </strong>Georgia Tech</li>
-									<li><i class="icofont-rounded-right"></i> <strong>Major: </strong>Computer Science
+									<li><i class="icofont-rounded-right"></i> <strong>Studio: </strong>Niantic</li>
+									<li><i class="icofont-rounded-right"></i> <strong>School: </strong>Georgia Tech - BS
+										in Computer Science
 									</li>
 									<li><i class="icofont-rounded-right"></i> <strong>Concentrations: </strong>Graphics
 										Programming and Artificial Intelligence</li>
@@ -279,15 +315,15 @@
 							</div>
 						</div>
 						<p>
-							My goal with every game is to make players happy, be it through a compelling narrative or
-							ridiculous antics. That being said, I don't mind if my players cry along the way, as long as
-							they leave with a smile 😊
+							My goal with every game is to make players smile, be it through a charming experience,
+							compelling narrative, or ridiculous antics.
+							That being said, I don't mind if my players cry along the way, as long as they leave thinking about the happy moments too 😊
 						</p>
 						</br>
 						</br>
 						</br>
 						<p>
-							&lt;= Alice, artist's rendition
+							<i class="icofont-rounded-left"></i> Alice, artist's rendition
 						</p>
 					</div>
 				</div>
@@ -313,7 +349,7 @@
 						<div class="progress">
 							<span class="skill">Unity <i class="val">Proficent</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
@@ -321,15 +357,7 @@
 						<div class="progress">
 							<span class="skill">C# <i class="val">Proficent</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
-
-						<div class="progress">
-							<span class="skill">Blender <i class="val">Competent</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
@@ -337,7 +365,15 @@
 						<div class="progress">
 							<span class="skill">Python <i class="val">Proficent</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+
+						<div class="progress">
+							<span class="skill">Blender <i class="val">Competent</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
@@ -345,6 +381,14 @@
 					</div>
 
 					<div class="col-lg-6">
+
+						<div class="progress">
+							<span class="skill">Java <i class="val">Proficent</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
 
 						<div class="progress">
 							<span class="skill">UE4 <i class="val">Familiar</i></span>
@@ -370,14 +414,6 @@
 							</div>
 						</div>
 
-						<div class="progress">
-							<span class="skill">Java <i class="val">Proficent</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
-
 					</div>
 
 				</div>
@@ -391,7 +427,7 @@
 
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResumeGames.pdf">here</a>
+					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResume.pdf">here</a>
 					</p>
 				</div>
 
@@ -424,37 +460,44 @@
 							<h5>2017 - 2020</h5>
 							<p><em>Atlanta, GA</em></p>
 							<ul>
-								<li>Serving as Speaker (<b>President</b> equivalent), responsible for organization,
+								<li>Served as Speaker (<b>President</b> equivalent), responsible for organization,
 									recruitment, and education</li>
 								<li>Led the creation of four video games and contributed assets from a variety of
 									disciplines to over a dozen other games.</li>
-							</ul>
-						</div>
-						<div class="resume-item">
-							<h4>Computer Science Teacher's Assistant</h4>
-							<h5>2015 - 2016</h5>
-							<p><em>Purcellville, VA</em></p>
-							<ul>
-								<li>Taught less experienced computer science students and guided them to greater
-									understanding</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-lg-6">
 						<h3 class="resume-title">Professional Experience</h3>
 						<div class="resume-item">
-							<h4>Student Researcher</h4>
+							<h4>Game Developer</h4>
+							<h5>March 2021 - Present</h5>
+							<p><em>Niantic, San Francisco, CA </em></p>
+							<ul>
+								<li>Creating a cutting-edge AR mobile pet-sim game in a small team, focusing on client
+									development in Unity.</li>
+								<li>Implementing retention-critical features like social systems, questing,
+									notifications, streaks, telemetry.</li>
+								<li>Collaborating with internal and external partners to efficiently integrate a variety
+									of services</li>
+								<li>Built native features where engine capabilities did not meet user needs.
+								<li>Constructed internal tooling used daily by animation, audio, and tech art teams to
+									allow rapid iteration.</li>
+							</ul>
+						</div>
+						<div class="resume-item">
+							<h4>Researcher</h4>
 							<h5>May 2020 - August 2020</h5>
-							<p><em>Georgia Tech Laboratory, Atlanta, GA </em></p>
+							<p><em>Georgia Tech Research Laboratory, Atlanta, GA</em></p>
 							<ul>
 								<li>Developed a Unity and Python flight simulator extensible to a variety of research
-									questions, especially human and Machine Learning piloting.</li>
+								questions, especially human and Machine Learning piloting.</li>
 								<li>Architected a custom networking protocol utilizing TCP to optimize ML training.</li>
 							</ul>
 						</div>
 						<div class="resume-item">
-							<h4>Student Research Assistant</h4>
-							<h5>January 2020 – May 2020</h5>
+							<h4>Research Assistant</h4>
+							<h5>January 2020 - May 2020</h5>
 							<p><em>Georgia Tech Research Institute, Atlanta, GA</em></p>
 							<ul>
 								<li>Researched applications of technologies designed to confer new capabilities upon
@@ -465,7 +508,7 @@
 						</div>
 						<div class="resume-item">
 							<h4>Extreme Blue Technical Intern</h4>
-							<h5>May 2019 – August 2019</h5>
+							<h5>May 2019 - August 2019</h5>
 							<p><em>IBM Corporation, Durham, NC</em></p>
 							<ul>
 								<li>Developed a scalable cloud-based service which utilizes a network of IoT sensors and
@@ -473,19 +516,8 @@
 									customers.</li>
 								<li>Predicted to increase customer satisfaction and prevent millions in damages
 									annually.</li>
-								<li>2nd place and People’s Choice in the multinational Call for Code competition among
+								<li>2nd place and People's Choice in the multinational Call for Code competition among
 									over 600 competitors.</li>
-							</ul>
-						</div>
-						<div class="resume-item">
-							<h4>Development Intern</h4>
-							<h5>June 2018 – August 2018</h5>
-							<p><em>Withum Digital, Bethesda, MD</em></p>
-							<ul>
-								<li>Enhanced and maintained React SharePoint and Angular Ethereum Blockchain
-									applications in an agile development environment. Created automated test systems
-									where none existed.</li>
-								<li>Managed expectations and shipped deliverables on time.</li>
 							</ul>
 						</div>
 					</div>
@@ -534,12 +566,9 @@
 			<!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi
 				placeat.</p> -->
 			<div class="social-links">
-				<a href="https://twitter.com/cinnamon18_" class="twitter"><i class="bx bxl-twitter"></i></a>
+				<a href="https://twitter.com/cinnasquid" class="twitter"><i class="bx bxl-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/alice-moh-1b4799163/" class="linkedin"><i
 						class="bx bxl-linkedin"></i></a>
-			</div>
-			<div class="copyright">
-				&copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
 			</div>
 			<div class="credits">
 				<!-- All the links in the footer should remain intact. -->
