--- a/penguPerilDetails.html
+++ b/penguPerilDetails.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Trouble on Beryl Isle</title>
+	<title>Pengu Peril</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -48,12 +48,9 @@
 				<div class="row">
 
 					<div class="col-lg-8">
-						<h2 class="portfolio-title">Trouble on Beryl Isle</h2>
+						<h2 class="portfolio-title">Pengu Peril</h2>
 						<div class="owl-carousel portfolio-details-carousel">
-							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi1.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi2.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi3.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/penguPerilCover.png" class="img-fluid" alt="">
 						</div>
 					</div>
 
@@ -61,15 +58,20 @@
 						<h3>Project information</h3>
 						<ul>
 							<li><strong>Engine</strong>: Unity</li>
-							<li><strong>Project date</strong>: Fall 2017</li>
+							<li><strong>Project date</strong>: April 2022</li>
 							<li><strong>Play</strong>: <a
-									href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/">http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/</a>
+									href="https://cinnamon18.itch.io/pengu-peril">https://cinnamon18.itch.io/pengu-peril</a>
 							</li>
 						</ul>
 
 						<p>
-							Trouble on Beryl Isle is a sunny platformer I worked on through VGDev. I coded AI for an
-							enemy in addition to creating levels and environments. </p>
+							Global warming strikes again! Pengu peril is a Ludum Dare 50 entry about a penguin on a
+							melting iceberg! Your mission: keep them dry for as long as possible!
+						</p>
+						<p>
+							I lead Unity development on Pengu Peril and had a lot of fun learning tile map wizardry.
+							Pengu Peril finished top 10% overall.
+						</p>
 					</div>
 
 				</div>
