--- a/peridotDetails.html
+++ b/peridotDetails.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Trouble on Beryl Isle</title>
+	<title>Peridot</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -48,28 +48,47 @@
 				<div class="row">
 
 					<div class="col-lg-8">
-						<h2 class="portfolio-title">Trouble on Beryl Isle</h2>
+						<h2 class="portfolio-title">Peridot</h2>
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KFPaWNjZ9uY"
+								title="Peridot Official Announcement Teaser Trailer" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								allowfullscreen></iframe>
+						</div>
+						</br>
 						<div class="owl-carousel portfolio-details-carousel">
-							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi1.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi2.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/tobi3.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/peridot1.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/peridot2.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/peridot3.png" class="img-fluid" alt="">
 						</div>
 					</div>
 
 					<div class="col-lg-4 portfolio-info">
 						<h3>Project information</h3>
 						<ul>
-							<li><strong>Engine</strong>: Unity</li>
-							<li><strong>Project date</strong>: Fall 2017</li>
-							<li><strong>Play</strong>: <a
-									href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/">http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/</a>
+							<li><strong>Engines</strong>: Unity / In-house</li>
+							<li><strong>Project date</strong>: 2021 - Present</li>
+							<li><strong>Play</strong>:
+								<a href="https://apps.apple.com/sg/app/peridot/id1613403407">iOS</a>,
+								<a
+									href="https://play.google.com/store/apps/details?id=com.nianticlabs.peridot&hl=en_US&gl=MY">Android</a>
 							</li>
 						</ul>
 
 						<p>
-							Trouble on Beryl Isle is a sunny platformer I worked on through VGDev. I coded AI for an
-							enemy in addition to creating levels and environments. </p>
+							Peridot is a cutting-edge AR mobile pet-sim game. The game is played with camera passthrough
+							AR and uses AI to build a 3d mesh of the world and identify the objects around the player.
+							This lets the player's pet, referred to as a “Peridot”, navigate around obstacles, swim
+							through water, and stop to sniff the flowers.
+						</p>
+						<p>
+							I serve primarily as a Unity engineer in our team, but I also do some server, tooling, and
+							tech art work. The nature of a smaller team means I've touched most major features in the
+							game, but some specific systems I've worked on are friending, gifting, questing,
+							notifications, streaks, news, and telemetry. I work with internal and external partners to
+							integrate services and build native features where engine capabilities did not meet user
+							needs.
+						</p>
 					</div>
 
 				</div>
