--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">Python <i class="val">Proficent</i></span>
+							<span class="skill">C++ <i class="val">Competent</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
@@ -383,6 +383,15 @@
 					<div class="col-lg-6">
 
 						<div class="progress">
+							<span class="skill">Python <i class="val">Proficent</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+
+
+						<div class="progress">
 							<span class="skill">Java <i class="val">Proficent</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
@@ -398,13 +407,6 @@
 							</div>
 						</div>
 
-						<div class="progress">
-							<span class="skill">C++ <i class="val">Familiar</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
 
 						<div class="progress">
 							<span class="skill">Substance Painter <i class="val">Familiar</i></span>
@@ -460,64 +462,54 @@
 							<h5>2017 - 2020</h5>
 							<p><em>Atlanta, GA</em></p>
 							<ul>
-								<li>Served as Speaker (<b>President</b> equivalent), responsible for organization,
-									recruitment, and education</li>
-								<li>Led the creation of four video games and contributed assets from a variety of
-									disciplines to over a dozen other games.</li>
+								<li>Served as president of the game development club. Responsible for organization, recruitment, and education.</li>
+								<li>Grew the club despite pandemic restrictions and initiated organizational reforms which enabled the club’s greater industry success than Georgia Tech’s official game design program.</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-lg-6">
 						<h3 class="resume-title">Professional Experience</h3>
 						<div class="resume-item">
-							<h4>Game Developer</h4>
-							<h5>March 2021 - Present</h5>
-							<p><em>Niantic, San Francisco, CA </em></p>
+							<h4>Engine Developer</h4>
+							<h5>February 2024 - Present</h5>
+							<p><em>Unity — San Francisco, CA </em></p>
 							<ul>
-								<li>Creating a cutting-edge AR mobile pet-sim game in a small team, focusing on client
-									development in Unity.</li>
-								<li>Implementing retention-critical features like social systems, questing,
-									notifications, streaks, telemetry.</li>
-								<li>Collaborating with internal and external partners to efficiently integrate a variety
-									of services</li>
-								<li>Built native features where engine capabilities did not meet user needs.
-								<li>Constructed internal tooling used daily by animation, audio, and tech art teams to
-									allow rapid iteration.</li>
+								<li>Expanding the capabilities of AR Foundation, Unity’s AR toolkit, with user requested and partner contracted features like debug visualizers, real-world light estimation, and occlusion.</li>
+								<li>Designing a C# AR API available to 100k+ developers which enables more realistic shaders.</li>
+								<li>Coordinating with engineers across multiple hardware sub-teams to produce a consistent user experience.</li>
+								<li>Implementing the Unity engine API in c++ on a major industry partner’s unannounced AR/VR headset.</li>
+							</ul>
+						</div>
+						<div class="resume-item">
+							<h4>Founder</h4>
+							<h5>July 2023 - Present</h5>
+							<p><em>Prismatic Squid (Game Studio) — San Francisco, CA </em></p>
+							<ul>
+								<li>Founded an independent game studio, creating a mobile RTS targeting an underserved market niche.</li>
+								<li>Identified and directed contract artists and musician to create game assets.</li>
+							</ul>
+						</div>
+						<div class="resume-item">
+							<h4>Game Developer</h4>
+							<h5>March 2021 - July 2023</h5>
+							<p><em>Niantic — San Francisco, CA </em></p>
+							<ul>
+								<li>Shipped Peridot, a cutting-edge AR mobile pet-sim game with millions of installs in a small team. Focused on client development in Unity.</li>
+								<li>Implemented retention-critical features like social systems, questing, notifications, streaks, telemetry.</li>
+								<li>Collaborated with internal and external partners to efficiently integrate a variety of services.</li>
+								<li>Built native features where engine capabilities did not meet user needs.</li>
+								<li>Constructed internal tooling used daily by animation, audio, and tech art teams to allow rapid iteration.</li>
 							</ul>
 						</div>
 						<div class="resume-item">
 							<h4>Researcher</h4>
 							<h5>May 2020 - August 2020</h5>
-							<p><em>Georgia Tech Research Laboratory, Atlanta, GA</em></p>
+							<p><em>Georgia Tech Research Institute — Atlanta, GA</em></p>
 							<ul>
-								<li>Developed a Unity and Python flight simulator extensible to a variety of research
-								questions, especially human and Machine Learning piloting.</li>
+								<li>Developed an extensible Unity and Python flight simulator to answer ML piloting research questions.</li>
 								<li>Architected a custom networking protocol utilizing TCP to optimize ML training.</li>
-							</ul>
-						</div>
-						<div class="resume-item">
-							<h4>Research Assistant</h4>
-							<h5>January 2020 - May 2020</h5>
-							<p><em>Georgia Tech Research Institute, Atlanta, GA</em></p>
-							<ul>
-								<li>Researched applications of technologies designed to confer new capabilities upon
-									legacy systems without software or hardware modifications.</li>
-								<li>Collaborated with RF engineers to analyze antenna interference in Command and
-									Control vehicles.</li>
-							</ul>
-						</div>
-						<div class="resume-item">
-							<h4>Extreme Blue Technical Intern</h4>
-							<h5>May 2019 - August 2019</h5>
-							<p><em>IBM Corporation, Durham, NC</em></p>
-							<ul>
-								<li>Developed a scalable cloud-based service which utilizes a network of IoT sensors and
-									machine learning to predict and prevent supply chain disruptions before they impact
-									customers.</li>
-								<li>Predicted to increase customer satisfaction and prevent millions in damages
-									annually.</li>
-								<li>2nd place and People's Choice in the multinational Call for Code competition among
-									over 600 competitors.</li>
+								<li>Researched applications of technologies designed to confer new capabilities upon legacy systems without modifications to existing software or hardware.</li>
+								<li>Collaborated with RF engineers to analyze antenna interference in Command and Control vehicles.</li>
 							</ul>
 						</div>
 					</div>
