update company to Unity

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
 				<div class="section-title">
 					<h2>Who am I?</h2>
-					<p>I'm Alice, a game dev at <a href="https://nianticlabs.com/?hl=en">Niantic</a>.
+					<p>I'm Alice, a game and engine developer currently at <a href="https://unity.com/">Unity</a>.
 						I also make indie games in my free time!
 						I've been making and playing games since elementary school, although over the years I've gotten
 						quite a
@@ -305,7 +305,7 @@
 						<div class="row">
 							<div class="col-lg-12">
 								<ul>
-									<li><i class="icofont-rounded-right"></i> <strong>Studio: </strong>Niantic</li>
+									<li><i class="icofont-rounded-right"></i> <strong>Presently: </strong>Unity Technologies</li>
 									<li><i class="icofont-rounded-right"></i> <strong>School: </strong>Georgia Tech - BS
 										in Computer Science
 									</li>
@@ -347,7 +347,7 @@
 					<div class="col-lg-6">
 
 						<div class="progress">
-							<span class="skill">Unity <i class="val">Proficent</i></span>
+							<span class="skill">Unity <i class="val">Proficent (I Develop It)</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
 									aria-valuemax="100"></div>
